upgraded desktop module pom to generate the full assembly for excecutable jar

--- a/al1-desktop/pom.xml
+++ b/al1-desktop/pom.xml
@@ -224,5 +224,34 @@
 				</plugins>
 			</build>
 		</profile>
+		<profile>
+			<id>assemblyfull</id>
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-assembly-plugin</artifactId>
+						<version>2.2.1</version>
+						<executions>
+							<execution>
+								<phase>package</phase>
+								<goals>
+									<goal>single</goal>
+								</goals>
+							</execution>
+						</executions>
+						<configuration>
+							<descriptorRefs>
+								<descriptorRef>jar-with-dependencies</descriptorRef>
+							</descriptorRefs>
+							<archive>
+								<manifest>
+									<mainClass>${webstartMain}</mainClass>
+								</manifest>
+							</archive>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
 	</profiles>
 </project>
