--- a/al1-android/pom.xml
+++ b/al1-android/pom.xml
@@ -39,14 +39,14 @@
 			<plugin>
 				<groupId>com.googlecode.mavennatives</groupId>
 				<artifactId>maven-nativedependencies-plugin</artifactId>
-				<version>0.0.5</version>
+				<version>${mavennatives.version}</version>
 				<configuration>
 					<nativesTargetDir>libs</nativesTargetDir>
 					<separateDirs>true</separateDirs>
 				</configuration>
 				<executions>
 					<execution>
-						<phase>package</phase>
+						<phase>prepare-package</phase>
 						<goals>
 							<goal>copy</goal>
 						</goals>
