--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
 		<commons.gdx.version>0.0.8-SNAPSHOT</commons.gdx.version>
 		<datastore.version>0.0.6-SNAPSHOT</datastore.version>
 		<gdx.version>0.9.3-SNAPSHOT</gdx.version>
+		<mavennatives.version>0.0.6</mavennatives.version>
 	</properties>
 
 	<build>
